# obsidian-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/agents/: __init__.py  base.py  factory.py
src/agents/implementations/: autogen.py  langgraph_agent.py  langgraph_agentic.py  pydantic_agent.py
src/core/: graph.py  vault_reader.py
src/obsidian_agent/agents/: base.py
src/obsidian_agent/agents/implementations/: autogen.py  autogen_test.py  langgraph_agent.py  langgraph_agentic.py  lg_test.py  pydantic_agent.py
src/obsidian_agent/config/: agent_config.py
src/obsidian_agent/core/: graph.py  vault.py
src/obsidian_agent/scripts/: main.py
src/obsidian_agent/services/: embedding.py  vectorstore.py
src/scripts/: main.py
src/services/: embedding.py  embedding_service.py  vectorstore.py  vectorstore_client.py
tests/: test_smoke.py
